--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "sass": "^1.54.5"
+    "sass": "^1.54.5",
+    "classnames": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
